--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 {{- if not (.Param "hideFooter") }}
 <footer class="footer">
     <script src="https://utteranc.es/client.js"
-    repo="intpyjl/yjlIntP.github.io"
+    repo="inco-yjl/inco-yjl.github.io"
     issue-term="title"
     theme="github-light"
     crossorigin="anonymous"
